# Kepstone_Experimental_Robot

./: .gitignore  README.md  frames.gv  package-lock.json  package.json  waypoints.txt
src/bumperbot_controller/: CMakeLists.txt  package.xml
src/bumperbot_controller/config/: diff_drive_controller.yaml  joystick.yaml
src/bumperbot_controller/launch/: controller.launch  joystick_teleop.launch  keyboard_teleop.launch  robot_controller.launch
src/bumperbot_controller/msg/: DustBagCapacityFeedback.msg  RollerBrushPosFeedback.msg  RollerBrushPowerFeedback.msg  SideBrushPosFeedback.msg  SideBrushSpeedFeedback.msg  VacuumPowerFeedback.msg
src/bumperbot_controller/nodes/: litter_tracker_node.cpp  move_manager_node.cpp  noisy_controller_node.cpp  rollerbrush_controller_node.cpp  rollerbrush_subscriber.cpp  sidebrush_controller_node.cpp  sidebrush_subscriber.cpp  simple_controller_node.cpp  vacuum_controller_node.cpp  vacuum_subscriber.cpp
src/bumperbot_controller/src/: litter_tracker.cpp  move_manager.cpp  noisy_controller.cpp  rollerbrush_controller.cpp  sidebrush_controller.cpp  simple_controller.cpp  vacuum_controller.cpp
src/bumperbot_controller/srv/: GetCurrentMode.srv  GetRollerBrushDirection.srv  GetRollerBrushPosition.srv  GetRollerBrushPower.srv  GetSideBrushSpeed.srv  GetVacuumPower.srv  ModeSwitch.srv  SetRollerBrushDirection.srv  SetRollerBrushPosition.srv  SetSideBrushDirection.srv  SetSideBrushPosition.srv  SetSideBrushSpeed.srv  SetVacuumPower.srv
src/bumperbot_description/: CMakeLists.txt  package.xml
src/bumperbot_description/launch/: display.launch  gazebo.launch  gazebo_test.launch
src/bumperbot_description/rviz/: display.rviz
src/bumperbot_description/urdf/: 2d_lidar.xacro  3d_velodyne_lidar.xacro  bumperbot.urdf.xacro  bumperbot_gazebo.xacro  depth_camera.xacro  lidar.xacro
src/bumperbot_description/worlds/: test_world1.sdf  test_world2.sdf  test_world2_obstacles.sdf
src/bumperbot_detection/: CMakeLists.txt  myrequirements.txt  package.xml
src/bumperbot_detection/config/: marker_config.yaml
src/bumperbot_detection/launch/: coordinate_detection.launch  litter_detection.launch
src/bumperbot_detection/msg/: DetectedLitterPoint.msg  LitterList.msg  LitterPoint.msg
src/bumperbot_detection/nodes/: coordinate_subscriber.cpp  image_compressor.cpp  litter_coordinate_subscriber.cpp  litter_coordinate_transformer_publisher.cpp  litter_memory_node.cpp  litter_plotter.cpp
src/bumperbot_detection/src/: cv_api_get_coordinates.py  get_coordinates.py  get_coordinates_rear.py  litter_coordinate_transformer.cpp  yolov8_get_coordinates.py
src/bumperbot_detection/srv/: AddLitter.srv  DeleteLitter.srv  GetLitterList.srv
src/bumperbot_examples/: CMakeLists.txt  package.xml
src/bumperbot_examples/config/: simple_configuration.yaml
src/bumperbot_examples/launch/: test_env.launch
src/bumperbot_examples/nodes/: simple_publisher.cpp  simple_subscriber.cpp  simple_timer.cpp  tf_examples_node.cpp  turtlesim_kinematics_node.cpp
src/bumperbot_examples/src/: tf_examples.cpp  turtlesim_kinematics.cpp
src/bumperbot_examples/srv/: GetTransform.srv
src/bumperbot_graphical_interface/: CMakeLists.txt  package-lock.json  package.xml
src/bumperbot_graphical_interface/db/: coverage_zones.db
src/bumperbot_graphical_interface/launch/: start_webapp.launch  test_env_webapp.launch
src/bumperbot_graphical_interface/my-app/: package-lock.json
src/bumperbot_graphical_interface/scripts/: end_coverage_planner_service.py  start_coverage_planner_service.py  start_coverage_service.py  write_waypoints_to_txt_file_service.py
src/bumperbot_graphical_interface/srv/: WriteWaypoints.srv
src/bumperbot_graphical_interface/web/: start_sql_server.sh  start_web_server.sh
src/bumperbot_localization/: CMakeLists.txt
src/bumperbot_localization/config/: ekf.yaml
src/bumperbot_localization/launch/: local_localization.launch
src/bumperbot_localization/nodes/: imu_republisher_node.cpp  kalman_filter_node.cpp
src/bumperbot_localization/src/: kalman_filter.cpp  lidar_fusion.cpp
src/bumperbot_utils/: CMakeLists.txt  package.xml
src/bumperbot_utils/nodes/: path_plotter_node.cpp
src/bumperbot_utils/src/: path_plotter.cpp  utils.cpp
src/coverage_planner/: CMakeLists.txt  package.xml
src/coverage_planner/config/: params.config
src/coverage_planner/data/: map.pgm  map2.pgm  my_world_map_small.pgm  my_world_map_test.pgm  test_map_2.pgm  test_map_X.pgm  test_map_wedge.pgm
src/coverage_planner/include/: bcd.h  cgal_definitions.h  graph_base_impl.h
src/coverage_planner/launch/: coverage_planner.launch
src/coverage_planner/result/: ext_polygon_coord.txt  roi_points.txt  waypoints.txt
src/coverage_planner/src/: bcd.cc  db_publisher_node.cpp  decomposition.cc  main.cpp  sweep.cc
src/i2r-adapter/: CMakeLists.txt  package.xml
src/i2r-adapter/src/: feedback_parser.cpp  i2r_driver.cpp  mission_gen.cpp
src/i2r_adapter/: CMakeLists.txt  package.xml
src/i2r_adapter/launch/: websocket_comm.launch
src/i2r_adapter/nodes/: client_node.cpp
src/i2r_adapter/src/: client.cpp  feedback_parser.cpp  i2r_driver.cpp  mission_gen.cpp
src/i2r_adapter/srv/: SendJson.srv
src/litter_destruction/: CMakeLists.txt  package.xml  setup.py
src/litter_destruction/action/: Navigate.action
src/litter_destruction/launch/: litter_destruction.launch  litter_manager.launch
src/litter_destruction/nodes/: boundary_visualizer_node.cpp
src/litter_destruction/src/: boundary_visualizer.cpp  litter_destroy.py  litter_manager_node.py
src/litter_destruction/srv/: GetLitterSet.srv  GetNextLitter.srv  GetNextTargetLitter.srv  GlobalBoundaryCenter.srv  HasLitterToClear.srv  LocalBoundaryCenter.srv  RemoveLitter.srv
src/navigation/: CMakeLists.txt  package.xml
src/navigation/config/: common_costmap.yaml  dwa_planner.yaml  global_costmap.yaml  global_costmap_navfn.yaml  local_costmap.yaml  move_base.yaml
src/navigation/launch/: amcl.launch  move_base.launch  navigation.launch  send_waypoints.launch  setup_waypoint_manager.launch
src/navigation/maps/: my_world_map.yaml  my_world_map2.pgm  (+2 more)
(+268 files in other folders)
