<?xml version="1.0"?>
<package format="2">
  <name>bumperbot_description</name>
  <version>0.0.0</version>
  <description>The bumperbot_description package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <!-- Optional: Add website, bug tracker, and repository URLs -->
  <!-- <url type="website">http://wiki.ros.org/bumperbot_description</url> -->

  <!-- Add your name as an author, if desired -->
  <!-- <author email="your_email@example.com">Your Name</author> -->

  <!-- Core dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>velodyne_description</build_depend>
  <build_depend>velodyne_simulator</build_depend>

  <!-- Required for runtime -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>velodyne_description</exec_depend>
  <exec_depend>velodyne_simulator</exec_depend>

  <!-- Export plugins for Gazebo -->
  <export>
    <gazebo_ros plugin_path="${prefix}/lib"/>
  </export>
</package>
