<?xml version="1.0"?>
<package format="2">
  <name>bumperbot_detection</name>
  <version>0.0.0</version>
  <description>The bumperbot_detection package</description>

  <maintainer email="keith@todo.todo">keith</maintainer>
  <license>TODO</license>

  <!-- Build tools dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python3</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>realsense2_camera</build_depend>

  <!-- Build export dependencies -->
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend> 
  <build_export_depend>eigen</build_export_depend>

  <!-- Execution dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend> 
  <exec_depend>eigen</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

</package>
