<?xml version="1.0"?>
<package format="2">
  <name>bumperbot_utils</name>
  <version>0.0.0</version>
  <description>The bumperbot_utils package</description>

  <maintainer email="keith@todo.todo">keith</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>  
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
