<?xml version="1.0"?>
<package format="2">
  <name>coverage_planner</name>
  <version>0.0.1</version>
  <description>The Coverage Planner ROS package</description>
  <maintainer email="junonn@example.com">Junonn</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>roslib</depend>

  <build_depend>Eigen3</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>CGAL</build_depend>
  <build_depend>sqlite3</build_depend>

  <exec_depend>Eigen3</exec_depend>
  <exec_depend>OpenCV</exec_depend>
  <exec_depend>CGAL</exec_depend>
  <build_depend>sqlite3</build_depend>
</package>
