<?xml version="1.0"?>
<package format="2">
  <name>i2r-adapter</name>
  <version>0.0.0</version>
  <description>The i2r-adapter package</description>

  <maintainer email="keithkwok99@gmail.com">keith</maintainer>

  <license>MIT</license>

  <!-- Authors do not have to be maintainers, but could be -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

</package>
