<?xml version="1.0"?>
<package format="2">
  <name>litter_destruction</name>
  <version>0.0.0</version>
  <description>The litter_destruction package</description>


  <maintainer email="keith@todo.todo">keith</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- Build dependencies -->
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>bumperbot_detection</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>bumperbot_utils</build_depend>
  <build_depend>navfn</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>bumperbot_detection</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>bumperbot_utils</exec_depend>
  <exec_depend>navfn</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
